--- a/src/app/detail-jeu/detail-jeu.component.html
+++ b/src/app/detail-jeu/detail-jeu.component.html
@@ -5,9 +5,9 @@
   <hr/>
   <p><strong>Identifiant : </strong>{{jeux.id}}</p>
   <p><strong>Description : </strong>{{jeux.description}}</p>
-  <p><strong>Editeur : </strong>{{jeux.editeur_id.nom}}</p>
+  <p><strong>Editeur : </strong>{{jeux.editeur_id}}</p>
   <p><strong>Langues : </strong>{{jeux.langue}}</p>
-  <p><strong>Theme : </strong>{{jeux.theme_id.nom}}</p>
+  <p><strong>Theme : </strong>{{jeux.theme_id}}</p>
   <p><strong>Durée : </strong>{{jeux.duree}}</p>
   <!--<p *ngFor="let meca of jeux.mecanic"><strong>Mécanique :</strong>{{meca.nom}}</p>-->
   <p><strong>Age : +</strong>{{jeux.age}}</p>
