--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -1,5 +1,5 @@
 <div>
-<h1 class='p-text-center'>Jeux</h1>
+<h1 class='p-text-center'>Liste des jeux</h1>
 <button pButton pRipple [style]="{'background-color': '#f7ba2a', 'border-color': '#f7ba2a', 'float': 'right'}" id="button" type="button" label="Créer un jeu" [routerLink]="['/jeux/creer']"></button>
 </div>
 
