--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
 
 <p-toast position="top-right" key="main"></p-toast>
 
-<!--div class="footer">
+<div class="footer">
   <p><strong>Copyright ©2021 La ludothèque des gens cool | Site web du projet marathon du semestre 4</strong></p>
-</div-->
+</div>
