--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -9,7 +9,7 @@
                 (onChange)="selectFilterNbJoueur()"
                 [(ngModel)]="selectedNbJoueur"
                 optionLabel="nbJoueurs" class="ng-invalid ng-dirty"
-                placeholder="Nombre de joueur minimum">
+                placeholder="Nombre de joueurs maximum">
     </p-dropdown>
   </div>
   <div class="p-field p-col-12 p-md-3">
@@ -25,7 +25,7 @@
                 (onChange)="selectFilterAge()"
                 [(ngModel)]="selectedAge"
                 optionLabel="age" class="ng-invalid ng-dirty"
-                placeholder="Age minimum">
+                placeholder="Age maximum">
     </p-dropdown>
   </div>
   <div class="p-field p-col-12 p-md-3">
