--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,7 +9,7 @@
   </p-fieldset>
   <br/>
   <p-fieldset [style]="{'background-color': '#DCDCDC'}" legend="À savoir">
-    Compte crée le {{user.created_at | amDateFormat:'LL'}} <br/>
+    Compte créé le {{user.created_at | amDateFormat:'LL'}} <br/>
     Comtpe modifié le {{user.updated_at | amDateFormat:'LL'}} <br/>
   </p-fieldset>
   <br/>
